--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,28 +19,29 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   <h1 class="w3-xlarge">MY GALLERY</h1>
   <h1>KASIRUJ KAEWKRED</h1>
+  <h2>6110110015</h2>
   
 </header>
 
 <!-- Photo Grid -->
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
   <div class="w3-half">
-    <img src="pic1.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/falls2.jpg" style="width:100%">
-    <img src="/w3images/paris.jpg" style="width:100%">
+    <img src="../blog/media/pic1.jpg" style="width:100%">
+    <img src="../blog/media/pic2.jpg" style="width:100%">
+    <img src="../blog/media/pic7.jpg" style="width:100%">
+    <img src="../blog/media/pic3.jpg" style="width:100%">
     <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="../blog/media/pic4.jpg" style="width:100%">
     
   </div>
 
   <div class="w3-half">
-    <img src="/w3images/underwater.jpg" style="width:100%">
-    <img src="/w3images/ocean.jpg" style="width:100%">
+    <img src="../blog/media/pic6.jpg" style="width:100%">
+    <img src="../blog/media/pic5.jpg" style="width:100%">
     <img src="/w3images/wedding.jpg" style="width:100%">
-    <img src="/w3images/mountainskies.jpg" style="width:100%">
+    <img src="../blog/media/pic8.jpg" style="width:100%">
     <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/underwater.jpg" style="width:100%">
+    <img src="../blog/media/pic9.jpg" style="width:100%">
   </div>
 </div>
   
