--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -19,7 +19,7 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   <h1 class="w3-xlarge">MY GALLERY</h1>
   <h1>KASIRUJ KAEWKRED</h1>
-  <h2>6110110015</h2>
+  <h2>6110110015  Section: 1</h2>
   
 </header>
 
